Safa api call logic added and data layer code refactored