@@ -11,12 +11,12 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     defaultConfig {
@@ -32,10 +32,24 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
+
+        debug {
+            // Debugging
+            debuggable true
+            jniDebuggable true
+        }
+
+//        compileOptions {
+//            org.gradle.parallel = true
+//            org.gradle.daemon = true
+//            org.gradle.jvmargs = ['-XX:MaxPermSize=512m', '-Xmx2048m']
+//            org.gradle.configureondemand = true
+//        }
     }
 }
 
